# new-game-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
resource/shader/: model_rendering_frag.glsl  model_rendering_vert.glsl  simple_frag_shader.glsl  simple_vert_shader.glsl
src/: core.cc  core.cpp  core.h  main.cc  main.cpp  model.cc  model.hh  shader.cc  shader.cpp  shader.h  shader.hh  stb_image.cc  texture.cc  texture.hh  utils.cc  utils.cpp  utils.h  utils.hh
